--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,19 @@
 {
   "name": "@aesthetics-index/ui",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "echo 'building ui'"
+  "main": "./index.ts",
+  "types": "./index.ts",
+  "exports": {
+    ".": "./index.ts",
+    "./tokens": "./tokens/index.css",
+    "./styles": "./styles/utilities.css"
+  },
+  "dependencies": {
+    "react": "^19.2.3"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.8",
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3"
   }
 }
