--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,6 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "echo 'building web'"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "^15.1.11",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "@aesthetics-index/ui": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "typescript": "^5.7.3",
+    "tailwindcss": "^4.0.3",
+    "postcss": "^8.5.1",
+    "@tailwindcss/postcss": "^4.0.3"
   }
 }
