--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
+    "next": "^15.1.11",
     "tailwindcss": "^4.0.3",
     "typescript": "^5.7.3"
   }
