--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.1.11",
+    "@aesthetics-index/ui": "workspace:*",
+    "next": "^15.5.12",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@aesthetics-index/ui": "workspace:*"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
     "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^5.7.3",
-    "tailwindcss": "^4.0.3",
     "postcss": "^8.5.1",
-    "@tailwindcss/postcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3"
   }
 }
