--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,9 @@
     "./tokens": "./tokens/index.css",
     "./styles": "./styles/utilities.css"
   },
+  "scripts": {
+    "build": "echo 'UI package - no build needed (TS only)'"
+  },
   "dependencies": {
     "react": "^19.2.3"
   },
