--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,26 +1,28 @@
 {
   "name": "@aesthetics-index/web",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@aesthetics-index/ui": "workspace:*",
-    "next": "^15.5.12",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "next": "16.0.10",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "lucide-react": "^0.555.0",
+    "next-themes": "^0.4.6",
+    "@aesthetics-index/ui": "workspace:*"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.3",
     "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "postcss": "^8.5.1",
+    "typescript": "^5.7.3",
     "tailwindcss": "^4.0.3",
-    "typescript": "^5.7.3"
+    "postcss": "^8.5.6",
+    "@tailwindcss/postcss": "^4.0.3"
   }
 }
