--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,23 +1,21 @@
 {
   "name": "@aesthetics-index/ui",
-  "version": "0.1.0",
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "version": "0.2.0",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
-    ".": "./index.ts",
-    "./tokens": "./tokens/index.css",
-    "./styles": "./styles/utilities.css"
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "echo 'UI package - no build needed (TS only)'"
+    "build": "echo 'UI package ready'"
   },
   "dependencies": {
-    "react": "^19.2.3"
+    "react": "^19.2.1",
+    "lucide-react": "^0.555.0",
+    "next-themes": "^0.4.6"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
-    "next": "^15.5.12",
-    "tailwindcss": "^4.0.3",
     "typescript": "^5.7.3"
   }
 }
