--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,9 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./tokens": "./tokens/index.css",
+    "./styles": "./styles/utilities.css"
   },
   "scripts": {
     "build": "echo 'UI package ready'"
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
+    "tailwindcss": "^4.0.3",
     "typescript": "^5.7.3"
   }
 }
