--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,8 +16,12 @@
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6"
   },
+  "peerDependencies": {
+    "next": "^15.1.7"
+  },
   "devDependencies": {
     "@types/react": "^19.0.8",
+    "next": "^15.1.7",
     "tailwindcss": "^4.0.3",
     "typescript": "^5.7.3"
   }
