--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "16.0.10",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "lucide-react": "^0.555.0",
-    "next-themes": "^0.4.6",
+    "@aesthetics-index/adapters-mock": "workspace:*",
     "@aesthetics-index/ui": "workspace:*",
-    "@aesthetics-index/adapters-mock": "workspace:*"
+    "aos": "^2.3.4",
+    "lucide-react": "^0.555.0",
+    "next": "16.0.10",
+    "next-themes": "^0.4.6",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
+    "@types/aos": "^3.0.7",
     "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^5.7.3",
-    "tailwindcss": "^4.0.3",
     "postcss": "^8.5.6",
-    "@tailwindcss/postcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3"
   }
 }
