--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./tokens": "./tokens/index.css",
-    "./styles": "./styles/utilities.css"
+    "./styles": "./styles/utilities.css",
+    "./styles/theme": "./styles/theme.css"
   },
   "scripts": {
     "build": "echo 'UI package ready'"
