--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "turbo": "^2.8.10"
+  },
+  "dependencies": {
+    "aos": "3.0.0-beta.6"
   }
 }
