feat: M2-redesign-v2 — page structure refactor per CEO direction
- page.tsx: Server Component with 5 Vorlage sections (Hero, Behandlungen, WieFunktionierts, Testimonial, CTA)
- layout.tsx: Header+Footer moved to RootLayout
- New components: Behandlungen, WieFunktionierts, Testimonial, CtaSection
- HeroSection.tsx: Client wrapper for router handling
- Public images: all Cruip template assets added
- UI package: new components exported

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aesthetics-index/adapters-mock": "workspace:*",
     "@aesthetics-index/ui": "workspace:*",
+    "@tailwindcss/forms": "^0.5.11",
     "aos": "^2.3.4",
     "lucide-react": "^0.555.0",
     "next": "16.0.10",
